--- a/2.html
+++ b/2.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
-<link href="../css training/my website/style.css" rel="stylesheet" type="text/css">
-<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
-<link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+<link href="my website/style.css" rel="stylesheet" type="text/css">
+<script src="SpryMenuBar.js" type="text/javascript"></script>
+<link href="SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -21,8 +21,8 @@
 
 <body>
 <header>
-<div class="div1"><img src="images/12.jpg" height="146" width="156"> </div>
-<div class="div2"><img src="images/123.jpg" height="149" width="557" > </div>
+<div class="div1"><img src="12.jpg" height="146" width="156"> </div>
+<div class="div2"><img src="123.jpg" height="149" width="557" > </div>
 </header>
 <div class="cont">
 <nav>
@@ -134,17 +134,17 @@
 <aside>
 <img src="images/55.jpg" height="200" width="200">
 <font color="#CCCCCC" face="Comic Sans MS"><h3 align="center">follow us</h3></font>
-<a href="http://www.facebook.com" target="blank"><img src="images/facebook.gif" height="50" width="50"></a>
-<a href="http://www.twitter.com" target="blank"><img src="images/twitter.png" height="50" width="50"></a>
-<a href="http://www.google.com" target="blank"><img src="images/google.png" height="50" width="50"></a>
-<a href="http://www.pintrest.com" target="blank"><img src="images/pin.png" height="50" width="50"></a>
+<a href="http://www.facebook.com" target="blank"><img src="facebook.gif" height="50" width="50"></a>
+<a href="http://www.twitter.com" target="blank"><img src="twitter.png" height="50" width="50"></a>
+<a href="http://www.google.com" target="blank"><img src="google.png" height="50" width="50"></a>
+<a href="http://www.pintrest.com" target="blank"><img src="pin.png" height="50" width="50"></a>
 <br><br><br>
 <font color="#FFFFFF" size="100" face="comic sans ms">
 <marquee scrollamount="10">umaer basha institute  of information technology </marquee>
 </font>
-<img src="images/s1.jpg" height="200" width="200">
+<img src="s1.jpg" height="200" width="200">
 <font color="#CCCCCC" face="Lucida Sans Unicode" size="8"> 20% discount <br> order now !</font>
-<img src="images/s2.jpg" height="200" width="200">
+<img src="s2.jpg" height="200" width="200">
 
 
 </aside>
@@ -160,7 +160,7 @@
 </font>
 </footer>
 <script type="text/javascript">
-var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
+var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryMenuBarDownHover.gif", imgRight:"SpryMenuBarRightHover.gif"});
 </script>
 </body>
 </html>	
